@@ -1,3 +1,8 @@
+*** 20011008_2 by db
+IP I lines should also check username
+
+
+
 *** 20011008_1 by db
 - fix for spoofing bug
 
